--- a/InventoryManager/src/Reports/reports.html
+++ b/InventoryManager/src/Reports/reports.html
@@ -1,251 +1,344 @@
-<div class="container">
-	<div class="row align-items-center">
-		<div class="col-md-5 mb-3">
-			<h2>Reports</h2>
+<section id="reportSection">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-5 mb-3">
+				<h2>Reports</h2>
+			</div>
+			<div class="col-7"></div>
+
+			<div class="accordion accordion-flush" id="accordionFlushExample">
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingOne">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseOne"
+							aria-expanded="false"
+							aria-controls="flush-collapseOne"
+						>
+							Purchase Report
+						</button>
+					</h2>
+					<div
+						id="flush-collapseOne"
+						class="accordion-collapse collapse"
+						aria-labelledby="flush-headingOne"
+						data-bs-parent="#accordionFlushExample"
+					>
+						<div class="accordion-body">
+							<div class="row justify-content-around">
+								<div class="col-md-4 mb-3">
+									<label for="selectSupplierInvoice">Supplier: </label>
+									<select id="selectSupplierInvoice"></select>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="statusInvoice">Status: </label>
+									<select id="statusInvoice">
+										<option value="">None</option>
+										<option value="Bought">Bought</option>
+										<option value="Pending">Pending</option>
+									</select>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="extNumber">External Number ID: </label>
+									<input id="extNumber" type="number" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="startDateInvoice">Start Date</label>
+									<input id="startDateInvoice" type="date" max="2022-12-08" />
+									<div class="invalid-feedback">
+										Please select a valid Date.
+									</div>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="endDateInvoice">End Date</label>
+									<input id="endDateInvoice" type="date" />
+									<div class="invalid-feedback">
+										Please select a valid Date.
+									</div>
+								</div>
+							</div>
+							<div style="height: 50px"></div>
+							<div class="row justify-content-around">
+								<a
+									id="invoice_download_btn"
+									class="btn btn-lg btn-download btn-theme"
+									href="javascript:searchReport('invoice')"
+								>
+									<i class="fa-solid fa-download fa-8x"> </i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingTwo">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseTwo"
+							aria-expanded="false"
+							aria-controls="flush-collapseTwo"
+						>
+							Sales Report
+						</button>
+					</h2>
+					<div
+						id="flush-collapseTwo"
+						class="accordion-collapse collapse"
+						aria-labelledby="flush-headingTwo"
+						data-bs-parent="#accordionFlushExample"
+					>
+						<div class="accordion-body">
+							<div class="row justify-content-around">
+								<div class="col-md-4 mb-3">
+									<label for="selectCustomerSale">Name: </label>
+									<select id="selectCustomerSale"></select>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="emailSale">Customer Email: </label>
+									<input
+										type="email"
+										id="emailSale"
+										placeholder="email@domain.com"
+									/>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="statusSale">Status: </label>
+									<select id="statusSale">
+										<option value="">None</option>
+										<option value="Bought">Bought</option>
+										<option value="Pending">Pending</option>
+									</select>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="startDateInvoice">Start Date</label>
+									<input id="startDateInvoice" type="date" max="2022-12-08" />
+									<div class="invalid-feedback">
+										Please select a valid Date.
+									</div>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="endDateInvoice">End Date</label>
+									<input id="endDateInvoice" type="date" />
+									<div class="invalid-feedback">
+										Please select a valid Date.
+									</div>
+								</div>
+							</div>
+							<div style="height: 50px"></div>
+							<div class="row justify-content-around">
+								<a
+									id="invoice_download_btn"
+									class="btn btn-lg btn-download btn-theme"
+									href="javascript:searchReport('order')"
+								>
+									<i class="fa-solid fa-download fa-8x"> </i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingThree">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseThree"
+							aria-expanded="false"
+							aria-controls="flush-collapseThree"
+						>
+							Customers
+						</button>
+					</h2>
+					<div
+						id="flush-collapseThree"
+						class="accordion-collapse collapse"
+						aria-labelledby="flush-headingThree"
+						data-bs-parent="#accordionFlushExample"
+					>
+						<div class="accordion-body">
+							<div class="row justify-content-around">
+								<div class="col-md-4 mb-3">
+									<label for="nameCustomer">Name: </label>
+									<input type="text" id="nameCustomer" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="emailCustomer">Email: </label>
+									<input type="email" id="emailCustomer" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="phoneCustomer">Telephone: </label>
+									<input type="text" id="phoneCustomer" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="addressCustomer">Address: </label>
+									<input type="text" id="addressCustomer" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="provinceCustomer">Province: </label>
+									<select id="provinceCustomer" name="province">
+										<option value="">Province</option>
+										<option value="Alberta">Alberta</option>
+										<option value="BC">British Columbia</option>
+										<option value="Manitoba">Manitoba</option>
+										<option value="New Brunswick">New Brunswick</option>
+										<option value="Newfoundland and Labrador">
+											Newfoundland and Labrador
+										</option>
+										<option value="Northwest Territories">
+											Northwest Territories
+										</option>
+										<option value="Nova Scotia">Nova Scotia</option>
+										<option value="Nunavut">Nunavut</option>
+										<option selected value="Ontario">Ontario</option>
+										<option value=" Prince Edward Island">
+											Prince Edward Island
+										</option>
+										<option value="Quebec">Quebec</option>
+										<option value="Saskatchewan">Saskatchewan</option>
+									</select>
+								</div>
+							</div>
+							<div style="height: 50px"></div>
+							<div class="row justify-content-around">
+								<a
+									id="invoice_download_btn"
+									class="btn btn-lg btn-download btn-theme"
+									href="javascript:searchReport('Customer')"
+								>
+									<i class="fa-solid fa-download fa-8x"> </i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingFour">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseFour"
+							aria-expanded="false"
+							aria-controls="flush-collapseFour"
+						>
+							Suppliers
+						</button>
+					</h2>
+					<div
+						id="flush-collapseFour"
+						class="accordion-collapse collapse"
+						aria-labelledby="flush-headingFour"
+						data-bs-parent="#accordionFlushExample"
+					>
+						<div class="accordion-body">
+							<div class="row justify-content-around">
+								<div class="col-md-4 mb-3">
+									<label for="nameSupplier">Name: </label>
+									<input type="text" id="nameSupplier" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="emailSupplier">Email: </label>
+									<input type="email" id="emailSupplier" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="phoneSupplier">Telephone: </label>
+									<input type="text" id="phoneSupplier" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="addressSupplier">Address: </label>
+									<input type="text" id="addressSupplier" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="provinceSupplier">Province: </label>
+									<select id="provinceSupplier" name="province">
+										<option value="">Province</option>
+										<option value="Alberta">Alberta</option>
+										<option value="BC">British Columbia</option>
+										<option value="Manitoba">Manitoba</option>
+										<option value="New Brunswick">New Brunswick</option>
+										<option value="Newfoundland and Labrador">
+											Newfoundland and Labrador
+										</option>
+										<option value="Northwest Territories">
+											Northwest Territories
+										</option>
+										<option value="Nova Scotia">Nova Scotia</option>
+										<option value="Nunavut">Nunavut</option>
+										<option selected value="Ontario">Ontario</option>
+										<option value=" Prince Edward Island">
+											Prince Edward Island
+										</option>
+										<option value="Quebec">Quebec</option>
+										<option value="Saskatchewan">Saskatchewan</option>
+									</select>
+								</div>
+							</div>
+							<div style="height: 50px"></div>
+							<div class="row justify-content-around">
+								<a
+									id="invoice_download_btn"
+									class="btn btn-lg btn-download btn-theme"
+									href="javascript:searchReport('supplier')"
+								>
+									<i class="fa-solid fa-download fa-8x"> </i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingFive">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseFive"
+							aria-expanded="false"
+							aria-controls="flush-collapseFive"
+						>
+							Inventory
+						</button>
+					</h2>
+					<div
+						id="flush-collapseFive"
+						class="accordion-collapse collapse"
+						aria-labelledby="flush-headingFive"
+						data-bs-parent="#accordionFlushExample"
+					>
+						<div class="accordion-body">
+							<div class="row justify-content-around">
+								<div class="col-md-4 mb-3">
+									<label for="nameProduct">Product Name: </label>
+									<input type="text" id="nameProduct" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="upcInventory">UPC: </label>
+									<input type="text" id="upcInventory" />
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="brandInventory">Brand: </label>
+									<input type="text" id="brandInventory" />
+								</div>
+							</div>
+							<div style="height: 50px"></div>
+							<div class="row justify-content-around">
+								<a
+									id="invoice_download_btn"
+									class="btn btn-lg btn-download btn-theme"
+									href="javascript:searchReport('inventory')"
+								>
+									<i class="fa-solid fa-download fa-8x"> </i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="col-7"></div>
-
-		<div class="accordion accordion-flush" id="accordionFlushExample">
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingOne">
-					<button
-						class="accordion-button collapsed"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#flush-collapseOne"
-						aria-expanded="false"
-						aria-controls="flush-collapseOne"
-					>
-						Purchase Report
-					</button>
-				</h2>
-				<div
-					id="flush-collapseOne"
-					class="accordion-collapse collapse"
-					aria-labelledby="flush-headingOne"
-					data-bs-parent="#accordionFlushExample"
-				>
-					<div class="accordion-body">
-						<div class="row justify-content-around">
-							<div class="col-md-4 mb-3">
-								<label for="startDate">Start Date</label>
-								<input id="startDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-							<div class="col-md-4 mb-3">
-								<label for="endDate">End Date</label>
-								<input id="endDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-						</div>
-						<div style="height: 50px"></div>
-						<div class="row justify-content-around">
-							<a
-								id="invoice_download_btn"
-								class="btn btn-lg btn-download btn-theme"
-								href="javascript:searchReport('invoice')"
-							>
-								<i class="fa-solid fa-download fa-8x"> </i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingTwo">
-					<button
-						class="accordion-button collapsed"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#flush-collapseTwo"
-						aria-expanded="false"
-						aria-controls="flush-collapseTwo"
-					>
-						Sales Report
-					</button>
-				</h2>
-				<div
-					id="flush-collapseTwo"
-					class="accordion-collapse collapse"
-					aria-labelledby="flush-headingTwo"
-					data-bs-parent="#accordionFlushExample"
-				>
-					<div class="accordion-body">
-						<div class="row justify-content-around">
-							<div class="col-md-4 mb-3">
-								<label for="startDate">Start Date</label>
-								<input id="startDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-							<div class="col-md-4 mb-3">
-								<label for="endDate">End Date</label>
-								<input id="endDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-						</div>
-						<div style="height: 50px"></div>
-						<div class="row justify-content-around">
-							<a
-								id="invoice_download_btn"
-								class="btn btn-lg btn-download btn-theme"
-								href="javascript:searchReport('order')"
-							>
-								<i class="fa-solid fa-download fa-8x"> </i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingThree">
-					<button
-						class="accordion-button collapsed"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#flush-collapseThree"
-						aria-expanded="false"
-						aria-controls="flush-collapseThree"
-					>
-						Customers
-					</button>
-				</h2>
-				<div
-					id="flush-collapseThree"
-					class="accordion-collapse collapse"
-					aria-labelledby="flush-headingThree"
-					data-bs-parent="#accordionFlushExample"
-				>
-					<div class="accordion-body">
-						<div class="row justify-content-around">
-							<div class="col-md-4 mb-3">
-								<label for="startDate">Start Date</label>
-								<input id="startDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-							<div class="col-md-4 mb-3">
-								<label for="endDate">End Date</label>
-								<input id="endDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-						</div>
-						<div style="height: 50px"></div>
-						<div class="row justify-content-around">
-							<a
-								id="invoice_download_btn"
-								class="btn btn-lg btn-download btn-theme"
-								href="javascript:searchReport('Customer')"
-							>
-								<i class="fa-solid fa-download fa-8x"> </i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingFour">
-					<button
-						class="accordion-button collapsed"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#flush-collapseFour"
-						aria-expanded="false"
-						aria-controls="flush-collapseFour"
-					>
-						Suppliers
-					</button>
-				</h2>
-				<div
-					id="flush-collapseFour"
-					class="accordion-collapse collapse"
-					aria-labelledby="flush-headingFour"
-					data-bs-parent="#accordionFlushExample"
-				>
-					<div class="accordion-body">
-						<div class="row justify-content-around">
-							<div class="col-md-4 mb-3">
-								<label for="startDate">Start Date</label>
-								<input id="startDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-							<div class="col-md-4 mb-3">
-								<label for="endDate">End Date</label>
-								<input id="endDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-						</div>
-						<div style="height: 50px"></div>
-						<div class="row justify-content-around">
-							<a
-								id="invoice_download_btn"
-								class="btn btn-lg btn-download btn-theme"
-								href="javascript:searchReport('Customer')"
-							>
-								<i class="fa-solid fa-download fa-8x"> </i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingFive">
-					<button
-						class="accordion-button collapsed"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#flush-collapseFive"
-						aria-expanded="false"
-						aria-controls="flush-collapseFive"
-					>
-						Inventory
-					</button>
-				</h2>
-				<div
-					id="flush-collapseFive"
-					class="accordion-collapse collapse"
-					aria-labelledby="flush-headingFive"
-					data-bs-parent="#accordionFlushExample"
-				>
-					<div class="accordion-body">
-						<div class="row justify-content-around">
-							<div class="col-md-4 mb-3">
-								<label for="startDate">Start Date</label>
-								<input id="startDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-							<div class="col-md-4 mb-3">
-								<label for="endDate">End Date</label>
-								<input id="endDate" type="date" />
-								<div class="invalid-feedback">Please select a valid Date.</div>
-							</div>
-						</div>
-						<div style="height: 50px"></div>
-						<div class="row justify-content-around">
-							<a
-								id="invoice_download_btn"
-								class="btn btn-lg btn-download btn-theme"
-								href="javascript:searchReport('Customer')"
-							>
-								<i class="fa-solid fa-download fa-8x"> </i>
-							</a>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</div>
-
-		<!-- <form> -->
-
-		<!-- <div class="row justify-content-center">
-			<button
-				hidden
-				id="btnDownload"
-				type="submit"
-				onclick="downloadResult()"
-				style="width: 150px"
-			>
-				Download
-			</button>
-		</div> -->
 	</div>
-</div>
+</section>
