--- a/InventoryManager/src/Invoice/ViewInvoice.html
+++ b/InventoryManager/src/Invoice/ViewInvoice.html
@@ -166,7 +166,55 @@
                 <button id="btnDelete" type="button" class="btn btn-danger col" onclick="viewInvoiceF.delete()"><i
                     class="fa-solid fa-trash"></i> Delete </button>
                 <button id="btnCancel" type="button" class="btn btn-secondary col" onclick="viewInvoiceF.cancel()"><i
-                        class="fa-solid fa-cancel"></i> Cancel </button> 
+                    class="fa-solid fa-cancel"></i> Cancel </button>
+                <button
+                    id="btnPrint"
+                    type="button"
+                    class="btn btn-dark col"
+                    data-bs-toggle="modal"
+                    data-bs-target="#printModal"
+                >
+                    <i class="fa-solid fa-print"></i> Print
+                </button>
+                <!-- Modal -->
+                <div
+                    class="modal fade"
+                    id="printModal"
+                    tabindex="-1"
+                    role="dialog"
+                    aria-labelledby="printModalLabel"
+                    aria-hidden="true"
+                >
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="printModalLabel">Print Invoice</h5>
+                                <button
+                                    type="button"
+                                    class="close"
+                                    data-dismiss="modal"
+                                    aria-label="Close"
+                                >
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">The invoice will open in a new page.</div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                    Cancel
+                                </button>
+                                <button
+                                    type="button"
+                                    class="btn btn-success"
+                                    data-bs-dismiss="modal"
+                                    onclick="window.open('../Reports/printInvoice.html', '_blank');"
+                                >
+                                    OK
+                                </button>
+                            </div>
+                        </div>
+                    </div>                
+                </div>
             </div>
             <div class="col-2">
                 <button id="btnEdit"  type="button" class="btn btn-primary col" onclick="viewInvoiceF.editInvoice()"><i
