--- a/InventoryManager/src/Order/Order.html
+++ b/InventoryManager/src/Order/Order.html
@@ -9,7 +9,7 @@
                   <span class="input-group-text"><i
                           class="fas fa-search"></i></span>
               </div>
-              <input type="text" id="myInput" onkeyup="orderTableF.filerTable()" class="form-control" placeholder="Search order by..."
+              <input type="text" id="myInput" onkeyup="orderTableF.filerTable()" class="form-control form-control-sm" placeholder="Search order by..."
                   aria-label="Search order by..." aria-describedby="basic-addon1">
           </div>
       </div>
@@ -24,8 +24,7 @@
               <tr class="header">
                   <th>Order Number</th>
                   <th>Description</th>
-                  <th>Subtotal </th>
-                  <th style="width:150px;">Created At</th>
+                  <th>Total $</th>
                   <th style="width:150px;">Action</th>
               </tr>
           </thead>
