--- a/InventoryManager/src/Order/ViewOrder.html
+++ b/InventoryManager/src/Order/ViewOrder.html
@@ -52,7 +52,7 @@
                         <i class="fa-solid fa-circle-info" title="ID number assigned by the supplier ordering system"></i>
                     </a>
                     <label class="viewData" data-bind="orderNumber"></label>
-                    <input type="number" hidden class="editData" data-bind="orderNumber" />
+                    <input type="number" hidden class="editData form-control form-control-sm" data-bind="orderNumber" />
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp2">
 						<span>ID number assigned by the supplier ordering system. Used for tracking purposes</span>
 					</div>
@@ -101,17 +101,17 @@
             </div>
             <div class="row p-1">
                 <div class="col"> 
-                    <label><strong>Subtotal: </strong></label>
+                    <label><strong>Subtotal: $</strong></label>
                     <label  data-bind="orderSubtotal"></label>
                 </div>
                 <div class="col">
-                    <label><strong>Tax: </strong></label>
+                    <label><strong>Tax: $ </strong></label>
                     <label  data-bind="orderTax"></label>
                 </div>
                 <div class="col">
                     <label><strong>Discount % : </strong></label>
                     <label class="viewData" data-bind="orderDiscount">0</label>
-                    <input type="number" hidden class="editData" data-bind="orderDiscount" />
+                    <input type="number" hidden class="editData form-control form-control-sm" data-bind="orderDiscount" />
                 </div>
                 <div class="col">
                     <label><strong>Order Completion Date: </strong></label>
@@ -119,7 +119,7 @@
                         <i class="fa-solid fa-circle-info" title="Date when all items in order were delivered in full"></i>
                     </a>
                     <label class="viewData" data-bind="orderArriveDate">2022-07-22</label>
-                    <input type="date" hidden class="editData" data-bind="orderArriveDate"/>
+                    <input type="date" hidden class="editData form-control form-control-sm" data-bind="orderArriveDate"/>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp4">
 						<span>Date when all items in order were "Complete Delivered"</span>
 					</div>
