--- a/InventoryManager/src/Order/ViewOrder.html
+++ b/InventoryManager/src/Order/ViewOrder.html
@@ -30,11 +30,11 @@
                 </div>
                 <div class="col">
                     <label><strong>Status: </strong></label>
-                    <a href="#collapseHelp" data-bs-toggle="collapse" href="#collapseHelp" role="button" aria-expanded="false" aria-controls="collapseHelp">
+                    <a data-bs-toggle="collapse" href="#collapseHelp" role="button" aria-expanded="false" aria-controls="collapseHelp">
                         <i class="fa-solid fa-circle-info" title="General Delivery Status of the order"></i>
                     </a>
                     <label class="viewData" data-bind="orderStatus">Bought</label>
-                    <select name="status" id="status" hidden class="editData" data-bind="orderStatus" tabindex="0" >
+                    <select name="status" id="status" hidden class="editData form-control form-control-sm" data-bind="orderStatus" tabindex="0" >
                         <option value="Bought">Bought</option>
                         <option value="Generated">Generated</option>
                         <option value="Cancelled">Cancelled</option>
@@ -48,7 +48,7 @@
             <div class="row p-1">
                 <div class="col">
                     <label><strong>External Number ID: </strong></label>
-                    <a href="#collapseHelp2" data-bs-toggle="collapse" href="#collapseHelp2" role="button" aria-expanded="false" aria-controls="collapseHelp2">
+                    <a data-bs-toggle="collapse" href="#collapseHelp2" role="button" aria-expanded="false" aria-controls="collapseHelp2">
                         <i class="fa-solid fa-circle-info" title="ID number assigned by the supplier ordering system"></i>
                     </a>
                     <label class="viewData" data-bind="orderNumber"></label>
@@ -59,11 +59,11 @@
                 </div>
                 <div class="col">
                     <label><strong>Sub Status: </strong></label>
-                    <a href="#collapseHelp3" data-bs-toggle="collapse" href="#collapseHelp3" role="button" aria-expanded="false" aria-controls="collapseHelp3">
+                    <a data-bs-toggle="collapse" href="#collapseHelp3" role="button" aria-expanded="false" aria-controls="collapseHelp3">
                         <i class="fa-solid fa-circle-info" title="Specific Delivery Status of the order"></i>
                     </a>
                     <label class="viewData" data-bind="orderSubStatus">Complete</label>
-                    <select name="subStatus" id="subStatus" hidden class="editData" data-bind="orderSubStatus">
+                    <select name="subStatus" id="subStatus" hidden class="editData form-control form-control-sm" data-bind="orderSubStatus">
                         <option value="Complete">Complete</option>
                         <option value="Incomplete">Incomplete</option>
                         <option value="Cancelled">Cancelled</option>
@@ -101,7 +101,7 @@
             </div>
             <div class="row p-1">
                 <div class="col"> 
-                    <label><strong>Subtotal: $</strong></label>
+                    <label><strong>Total: $</strong></label>
                     <label  data-bind="orderSubtotal"></label>
                 </div>
                 <div class="col">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col">
                     <label><strong>Order Completion Date: </strong></label>
-                    <a href="#collapseHelp4" data-bs-toggle="collapse" href="#collapseHelp4" role="button" aria-expanded="false" aria-controls="collapseHelp4">
+                    <a data-bs-toggle="collapse" href="#collapseHelp4" role="button" aria-expanded="false" aria-controls="collapseHelp4">
                         <i class="fa-solid fa-circle-info" title="Date when all items in order were delivered in full"></i>
                     </a>
                     <label class="viewData" data-bind="orderArriveDate">2022-07-22</label>
