--- a/InventoryManager/src/Customers/IndexCustomer.html
+++ b/InventoryManager/src/Customers/IndexCustomer.html
@@ -29,7 +29,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-search"></i></span>
                     </div>
-                    <input type="text" id="myInput" onkeyup="CustomerTableF.filterTable()" class="form-control"
+                    <input type="text" id="myInput" onkeyup="CustomerTableF.filterTable()" class="form-control form-control-sm"
                         placeholder="Search Customer by..." aria-label="Search Customer by..."
                         aria-describedby="basic-addon1">
                 </div>
