--- a/InventoryManager/src/Inventory/ListViewInventory.html
+++ b/InventoryManager/src/Inventory/ListViewInventory.html
@@ -9,9 +9,9 @@
                     <span class="input-group-text"><i
                             class="fas fa-search"></i></span>
                 </div>
-                <input type="text" id="myInput" onkeyup="inventoryTableF.filerTable()" class="form-control"
-                     placeholder="Filter by product, type or description"
-                    aria-label="Filter by product, brand, type or description" aria-describedby="basic-addon1" Class "form-control form-control-sm">
+                <input type="text" id="myInput" onkeyup="inventoryTableF.filerTable()" class="form-control form-control-sm"
+                    placeholder="Filter by product, type or description"
+                    aria-label="Filter by product, brand, type or description" aria-describedby="basic-addon1">
             </div>
         </div>
         <div class="col-1">
