--- a/InventoryManager/src/Invoice/Invoice.html
+++ b/InventoryManager/src/Invoice/Invoice.html
@@ -10,7 +10,7 @@
                     <i class="fa fa-search" title="Search Invoice by... ID, External ID, Description or Subtotal">
                         </i></span>
               </div>
-              <input type="text" id="myInput" onkeyup="invoiceTableF.filerTable()" class="form-control" placeholder="Filter by ID, External ID, Description or Subtotal"
+              <input type="text" id="myInput" onkeyup="invoiceTableF.filerTable()" class="form-control form-control-sm" placeholder="Filter by ID, External ID, Description or Subtotal"
                   aria-label="Search Invoice by... ID, External Number, Description or Subtotal" aria-describedby="basic-addon1">
             </div>
       </div>
