--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -29,7 +29,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-search"></i></span>
                     </div>
-                    <input type="text" id="myInput" onkeyup="personTableF.filterTable()" class="form-control"
+                    <input type="text" id="myInput" onkeyup="personTableF.filterTable()" class="form-control form-control-sm"
                         placeholder="Search Employee by..." aria-label="Search enployee by..."
                         aria-describedby="basic-addon1"/>
                 </div>
