--- a/InventoryManager/src/Supplier/ListViewSupplier.html
+++ b/InventoryManager/src/Supplier/ListViewSupplier.html
@@ -20,7 +20,7 @@
                             <span class="input-group-text"><i
                                     class="fas fa-search"></i></span>
                         </div>
-                        <input type="text" id="myInput" onkeyup="supplierTableF.filerTable()" class="form-control" placeholder="Search Supplier by..."
+                        <input type="text" id="myInput" onkeyup="supplierTableF.filerTable()" class="form-control form-control-sm" placeholder="Search Supplier by..."
                             aria-label="Search product by..." aria-describedby="basic-addon1">
                     </div>
                 </div>
