--- a/InventoryManager/src/Login/login.html
+++ b/InventoryManager/src/Login/login.html
@@ -17,7 +17,8 @@
       <form id="form-signin" class="g-3 m-1" onsubmit="myFunction(event)" aria-label="Login Form">
         
         <div class="row m-1">
-          <img class="mb-2 p-2" src="./login1.png" alt="" max-width="120 px" alt="login logo">
+          <!-- <img class="mb-2 p-2" src="./login1.png" alt="" max-width="120 px" alt="login logo"> -->
+          <img class="mb-2 p-2" src="../Commons/images/LogoemmaDepot.png" alt="" style="width: 200px; height: auto; margin-left: auto; margin-right: auto;" alt="login logo">
           <h1 class="h3 mb-3 font-weight-normal" aria-label="Please sign in">Please sign in</h1>
         </div>
         <div class="row m-1">
