--- a/InventoryManager/src/Product/ListViewProduct.html
+++ b/InventoryManager/src/Product/ListViewProduct.html
@@ -7,7 +7,10 @@
         </div>
         <div class="col-3">
             <a href="./Main.html?page=newProduct">
-                <button type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg"></i> New Product</button>
+                <button type="submit" value="Submit"
+                style="padding: 20px 20px;">
+                    <i class="fa-solid fa-plus fa-lg"></i> 
+                    New Product</button>
             </a>
         </div>
         <div class="container">
@@ -20,7 +23,7 @@
                             <span class="input-group-text"><i
                                     class="fas fa-search"></i></span>
                         </div>
-                        <input type="text" id="myInput" onkeyup="productTableF.filerTable()" class="form-control" placeholder="Search product by..."
+                        <input type="text" id="myInput" onkeyup="productTableF.filerTable()" class="form-control form-control-sm" placeholder="Search product by..."
                             aria-label="Search product by..." aria-describedby="basic-addon1">
                     </div>
                 </div>
