Change page for print sale and purchase

--- a/InventoryManager/src/Invoice/ViewInvoice.html
+++ b/InventoryManager/src/Invoice/ViewInvoice.html
@@ -207,7 +207,7 @@
                                     type="button"
                                     class="btn btn-success"
                                     data-bs-dismiss="modal"
-                                    onclick="window.open('../Reports/printInvoice.html', '_blank');"
+                                    onclick="window.open('../Reports/printPurchase.html', '_blank');"
                                 >
                                     OK
                                 </button>
