--- a/InventoryManager/src/Reports/printSale.html
+++ b/InventoryManager/src/Reports/printSale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 	<head>
-		<title>Invoice</title>
+		<title>Sale</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta charset="UTF-8" />
 
@@ -51,7 +51,7 @@
 										<div class="col-sm-6">
 											<div class="invoice">
 												<h1 class="text-end inv-header-1 mb-0">
-													Invoice No: #1111
+													Invoice No: #1
 												</h1>
 											</div>
 										</div>
@@ -63,11 +63,11 @@
 											<div class="invoice-number">
 												<h4 class="inv-title-1">Invoice To</h4>
 												<p class="invo-addr-1 mb-0">
-													123 Grand Falcon Ave <br />
-													Fonthill, ON W3E 4R5 <br />
-													Phone: (206) 555-1163 <br />
-													Fax: (206) 555-1164 <br />
-													
+													Kelly Cohen
+													69 Adelaide av <br />
+													Toronto, ON M3V 9H1 <br />
+													Phone: (647) 467 2894 <br />
+													<br/>
 												</p>
 											</div>
 										</div>
@@ -75,7 +75,7 @@
 											<div class="invoice-number text-end">
 												<h4 class="inv-title-1">Bill To</h4>
 												<p class="invo-addr-1 mb-0">
-													Angela Devin <br />
+													Emma Deport <br />
 													400 Excalibur St. <br />
 													St. Catherines, ON Y6R 6Y5 <br />
 													Phone: (206) 555-1163 <br />
@@ -86,7 +86,7 @@
 									<div class="row">
 										<div class="col-sm-6 mb-30">
 											<h4 class="inv-title-1">Date</h4>
-											<p class="inv-from-1 mb-0">Due Date: 25/06/2018</p>
+											<p class="inv-from-1 mb-0">Due Date: 22/07/2022</p>
 										</div>
 										<div class="col-sm-6 text-end mb-30">
 											<h4 class="inv-title-1">Payment Method</h4>
@@ -110,25 +110,11 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td>1</td>
-														<td>Timing Key</td>
-														<td>45021</td>
-														<td>$ 0.15</td>
-														<td>$ 0.15</td>
-													</tr>
-													<tr>
-														<td>1</td>
-														<td>Blade</td>
-														<td>76556</td>
-														<td>$ 35.00</td>
-														<td>$ 35.00</td>
-													</tr>
-													<tr>
 														<td>2</td>
-														<td>Shop</td>
-														<td>0000</td>
-														<td>$ 30</td>
-														<td>$ 60</td>
+														<td>Mobil 1 5W30 Motor Oil</td>
+														<td>123456</td>
+														<td>$ 767.00</td>
+														<td>$ 1,534.00</td>
 													</tr>
 												</tbody>
 												<tfoot>
@@ -137,14 +123,14 @@
 														<td></td>
 														<td></td>
 														<td><strong>Subtotal</strong></td>
-														<td><strong>$ 95.15</strong></td>
+														<td><strong>$ 1,534.00</strong></td>
 													</tr>
 													<tr>
 														<td></td>
 														<td></td>
 														<td></td>
 														<td><strong>Tax</strong></td>
-														<td><strong>$ 12.37</strong></td>
+														<td><strong>$ 199.42</strong></td>
 													</tr>
 													<tr>
 														<td></td>
@@ -158,7 +144,7 @@
 														<td></td>
 														<td></td>
 														<td><strong>Total</strong></td>
-														<td><strong>$ 107.52</strong></td>
+														<td><strong>$ 1,733.42</strong></td>
 													</tr>
 												</tfoot>
 											</table>
